--- a/common.css
+++ b/common.css
@@ -19,12 +19,12 @@ header {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 0 25ßpx;
+    padding: 0 30px;
 }
 .logo a {
     color: white;
     text-decoration: none;
-    font-size: 1.4rem;
+    font-size: 1.5rem;
     font-weight: bold;
 }
 nav {
@@ -48,7 +48,6 @@ nav ul li a {
     text-decoration: none;
     padding: 10px;
     transition: background-color 0.3s;
-    font-size: 14px;
 }
 nav ul li a:hover {
     background-color: rgba(255, 255, 255, 0.2);
